remove rtf output and fix font and text-indent in css for Chinese display.

--- a/pandoc.css
+++ b/pandoc.css
@@ -6,7 +6,7 @@ body {
     border-left: 1px solid black;
     border-right: 1px solid black;
     color: black;
-    font-family: Verdana, sans-serif;
+    font-family: "微软雅黑",Verdana, sans-serif;
     font-size: 100%;
     line-height: 140%;
     color: #000; 
@@ -16,6 +16,9 @@ pre {
     background-color: #ececec;
     color: #1111111;
     padding: 0.5em;
+}
+p {
+    text-indent:2em;
 }
 code {
     font-family: monospace;
@@ -31,7 +34,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
     text-decoration: none;
     color: #335; 
 }
-h1, h2, h3, h4, h5 { font-family: verdana;
+h1, h2, h3, h4, h5 { font-family: "黑体",verdana;
                      font-weight: bold;
                      border-bottom: 1px dotted black;
                      color: #345; }
