--- a/template/pandoc.css
+++ b/template/pandoc.css
@@ -27,12 +27,15 @@ code {
     position: absolute;
     left:5px;
 }
+a {
+    color: #4183C4
+}
 #TOC a{
-    color: #335;
+    color: #4183C4;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a { 
     text-decoration: none;
-    color: #335; 
+    color: #000; 
 }
 h1, h2, h3, h4, h5 { font-family: "黑体",verdana;
                      font-weight: bold;
